Add selectors and rules
- Added #menu selector and:
  height,
  display,
  align-items rules
- Added #menu-items selector and:
  margin-left rules
- Added .menu-item selector and:
  color,
  font-size,
  font-family,
  display,
  text-decoration,
  padding rules

--- a/style.css
+++ b/style.css
@@ -7,3 +7,23 @@
 body {
  background-color: #18181b;
 }
+
+#menu {
+ height: 100vh;
+ display: flex;
+ align-items: center;
+}
+
+#menu-items {
+ margin-left: clamp(4rem, 20vw, 48rem);
+}
+
+.menu-item {
+ color: white;
+ font-size: clamp(3rem, 8vw, 8rem);
+ font-family: Arial, Helvetica, sans-serif;
+
+ display: block;
+ text-decoration: none;
+ padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
+}
