--- a/style.css
+++ b/style.css
@@ -15,15 +15,25 @@ body {
 }
 
 #menu-items {
- margin-left: clamp(4rem, 20vw, 48rem);
+ margin-left: 4rem;
+}
+
+#menu-items:hover > .menu-item{
+ opacity: 0.3;
+}
+
+#menu-items:hover > .menu-item:hover {
+ opacity: 1;
 }
 
 .menu-item {
  color: white;
  font-size: clamp(3rem, 8vw, 8rem);
- font-family: Arial, Helvetica, sans-serif;
+ font-family: 'Manrope', sans-serif;
 
  display: block;
  text-decoration: none;
- padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
+ padding: .25rem 0rem;
+
+ transition: opacity 400ms ease;
 }
